fixed menu card gap

--- a/css/menu.scss
+++ b/css/menu.scss
@@ -62,7 +62,7 @@ a {
     @include gridCenter;
     width: 100%;
     height: fit-content;
-    background: radial-gradient(124.68% 124.31% at 50% 50%, rgba(238, 238, 238, 0.27) 0%, rgba(0, 0, 0, 0.44) 48.44%);
+    // background: radial-gradient(124.68% 124.31% at 50% 50%, rgba(238, 238, 238, 0.27) 0%, rgba(0, 0, 0, 0.44) 48.44%);
     h1 a {
         z-index: 1;
         display: block;
@@ -110,13 +110,13 @@ a {
                 width: 100%;
                 height: 100%;
                 position: absolute;
-                top: 80%;
+                top: 70%;
                 left: 0;
                 padding: 5px 5%;
                 background: linear-gradient(0deg, rgba(0, 0, 0, 0.75) 1.19%, rgba(0, 0, 0, 0.68) 48.02%, rgba(0, 0, 0, 0.56) 68.61%, rgba(0, 0, 0, 0.01) 100%);
                 h2 {
                     width: 100%;
-                    height: 20%;
+                    height: 30%;
                     padding: 5px 0;
                     @include articleFont;
                     font-size: 1.2rem;
