--- a/css/style.scss
+++ b/css/style.scss
@@ -186,7 +186,7 @@
                     h2 {
                         width: 100%;
                         height: 20%;
-                        padding: 5px 0;
+                        padding: 0;
                         @include articleFont;
                         font-size: 1.2rem;
                         text-transform: uppercase;
